<resources>
    <string name="app_name">Intake</string>
    <string name="action_settings">Settings</string>
    <string name="loading_meals">Loading…</string>
    <string name="blank_meals">No meals logged yet.</string>
    <string name="error_getting_meals">Could not load your meals.</string>
    <string name="error_saving_meal">Error trying to save your meal.</string>
    <string name="error_deleting_meal">Error tyring to delete meal.</string>
    <string name="error_getting_meals_action">Retry</string>
    <string name="error_no_times">Must add at lest one item to a meal.</string>
    <string name="error_getting_meal_message">There was an error editing meal.</string>
    <string name="error_getting_meal_ok">OK</string>

    <string name="loading_meal_to_edit">Loading…</string>

    <string name="delete_meal_title">Wipe this meal?</string>
    <string name="delete_meal_message">This will wipe this meal from your steam are you sure?</string>
    <string name="delete_meal_yes">Yes</string>
    <string name="delete_meal_no">No</string>

    <string name="could_not_delete_meal">Could not delete meal</string>
    <string name="snack">Snack</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="drink">Drink</string>
    <string name="light">Light</string>
    <string name="normal">Normal</string>
    <string name="heavy">Heavy</string>
    <string name="previous">Previous </string>
    <string name="save">save</string>
    <string name="item_title">Item title</string>

</resources>
